fix pagination on mobile, fix array render

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@
 
 .pagination {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	flex-direction: row;
 	list-style: none;
 	cursor: pointer;
 }
